@@ -2,6 +2,7 @@ hildon-application-manager (1:2.2.23~unreleased) unstable; urgency=low
 
   [ Gabriel Schulhof ]
   * Remove "Edit" button from repo list. repo list row-activate is now "Edit"
+  * Move "Delete" button into the repo details dialog
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 04 Jun 2009 21:52:00 +0100	
 
